--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -5,15 +5,27 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="/stylesheets/style.css">
     <title>Todo</title>
-    {{#if_eq theme 'dark'}}
+    {{#ifStyleToggle userSettings.styleToggle}}
+    <style>
+        :root {
+            --body-bg: #333;
+            --body-color: #f5f5f5;
+            --table-text-color: #f5f5f5;
+            --table-hover-color: #555;
+        }
+    </style>
+    {{else}}
         <style>
-            body {
-                background: white;
-                color: black;
+            :root {
+                --body-bg: #f5f5f5;
+                --body-color: #333;
+                --table-text-color: #333;
+                --table-hover-color: #ddd;
             }
         </style>
-    {{/if_eq}}
+    {{/ifStyleToggle}}
 </head>
 <body>
 {{{body}}}
