--- a/views/layouts/default.hbs
+++ b/views/layouts/default.hbs
@@ -10,8 +10,8 @@
     {{#ifStyleToggle userSettings.styleToggle}}
     <style>
         :root {
-            --body-bg: #333;
-            --body-color: #f5f5f5;
+            --body-bg: #6F4E37;
+            --body-color: #FED8B1;
             --table-text-color: #f5f5f5;
             --table-hover-color: #555;
         }
@@ -19,8 +19,8 @@
     {{else}}
         <style>
             :root {
-                --body-bg: #f5f5f5;
-                --body-color: #333;
+                --body-bg: #FED8B1;
+                --body-color: #6F4E37;
                 --table-text-color: #333;
                 --table-hover-color: #ddd;
             }
