--- a/views/todoupdated.hbs
+++ b/views/todoupdated.hbs
@@ -1,2 +1,4 @@
-<p>Todo udpated!</p>
-<form action="/" method="get"><input type="submit" value="Return to Home Page"></form>
+<article id="todo-created">
+    <h1>Todo Updated!</h1>
+    <form action="/" method="get"><input type="submit" value="Return to Home Page" class="small-action-button"></form>
+</article>
